<resources>
    <string name="app_name">Chat App</string>
    <string name="chat_app">Chat App</string>
    <string name="reliable_and_fast">Reliable and Fast</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="to_my_chat_app">to my chat app</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_an_account">Have an account?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="reset">Reset</string>
    <string name="go_back_to_login">Go back to Login</string>

    <string name="fields_empty">Fields are empty</string>
    <string name="email_empty">Please enter your email</string>
    <string name="password_empty">Please enter your password</string>
    <string name="first_name_empty">Please enter your first name</string>
    <string name="last_name_empty">Please enter your last name</string>
    <string name="confirm_empty">Re-enter your password</string>
    <string name="confirm_fails">Confirm password is wrong </string>
    <string name="password_weak">Your password is weak</string>

    <string name="incorrect">Email or password incorrect</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>