<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/LoginFragment">

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.karry.account_feature.presentation.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
        <action
            android:id="@+id/action_LoginFragment_to_ForgotFragment"
            app:destination="@id/ForgotFragment"
            app:enterAnim="@anim/from_left"
            app:exitAnim="@anim/to_right"
            app:popEnterAnim="@anim/from_right"
            app:popExitAnim="@anim/to_left" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="com.karry.account_feature.presentation.register.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register"/>
    <fragment
        android:id="@+id/ForgotFragment"
        android:name="com.karry.account_feature.presentation.forgot_password.ForgotFragment"
        android:label="@string/reset"
        tools:layout="@layout/fragment_forgot" />
</navigation>